<resources>
    <!-- strings app name -->
    <string name="app_name">MotoCar</string>

    <!-- strings title activities -->
    <string name="titleInicio">Inicio</string>
    <string name="titleRegistro">Registro</string>
    <string name="titleInicioSesion">inicio de sesion</string>
    <string name="titleMenu">Menu</string>
    <string name="titleRegVehiculos">Registro de vehiculos</string>
    <string name="titleRegDocumentos">Registro de documentos</string>
    <string name="titleRegGastos">Registro de gastos</string>

    <!-- strings splash activity -->
    <string name="nere5">by \n nere5</string>
    <string name="descriptionImgLogoMotoCar">imgLogoMotoCar</string>

    <!-- strings inicio activity -->
    <string name="btnRegistro">Registro</string>
    <string name="btnInicioSesion">Inicio Sesión</string>
    <string name="btnSalirInicio">Salir</string>

    <!-- strings registro activity -->
    <string name="hintNombres">Nombres</string>
    <string name="hintApellidos">Apellidos</string>
    <string name="hintCorreo">Correo Electrónico</string>
    <string name="hintClave">Clave</string>
    <string name="hintConfClave">Confirmar Clave</string>
    <string name="btnEnviar">Enviar</string>
    <string name="btnSalirRegistro">Salir</string>

    <!-- strings inicioSesion activity-->
    <string name="btnEnviarInicioSesion">Enviar</string>
    <string name="btnSalirInicioSesion">Salir</string>

    <!-- strings menu activity-->
    <string name="btnRegVehiculos">Registrar Vehiculos</string>
    <string name="btnRegDocumentos">Registrar Documentos</string>
    <string name="btnRegGastos">Registrar Gastos</string>
    <string name="btnEstadisticas">Estadisticas</string>
    <string name="btnSalirMenu">Salir</string>

    <!-- strings regVehiculos activity-->
    <string name="hintTipoVehiculo">Tipo Vehiculo</string>
    <string name="hintMarca">Marca</string>
    <string name="hintModelo">Modelo</string>
    <string name="hintCilindraje">Cilindraje</string>
    <string name="hintPlaca">Placa</string>
    <string name="btnRegistrar">Registrar</string>
    <string name="btnSalirRegVehiculo">Salir</string>

    <!-- strings regDocumentos activity-->
    <string name="hintPlacaDoc">Placa</string>
    <string name="hintTipoDocumento">Tipo Documento</string>
    <string name="hintNumDocumento">Numero Documento</string>
    <string name="hintFechaInicial">FechaInicial</string>
    <string name="hintFechaFinal">FechaFinal</string>
    <string name="btnRegistrarDoc">Registrar</string>
    <string name="btnSalirDoc">salir</string>

    <!-- strings regGastos activity-->
    <string name="hintFechaGasto">Fecha</string>
    <string name="hintPlacaGasto">Placa</string>
    <string name="hintKilometrajeGasto">Kilometraje</string>
    <string name="hintGasto">Gasto</string>
    <string name="hintValorGasto">Valor</string>
    <string name="btnRegGasto">Registrar</string>
    <string name="btnSalirGasto">Salir</string>




</resources>