<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="100dp"
    android:layout_marginLeft="@dimen/margin50dp"
    android:layout_marginRight="@dimen/margin50dp">

    <EditText
        android:id="@+id/edtPlacaDoc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:autofillHints="Placa"
        android:hint="@string/hintPlacaDoc"/>

    <EditText
        android:id="@+id/edtTipoDocumento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:autofillHints="TipoDocumento"
        android:hint="@string/hintTipoDocumento" />

    <EditText
        android:id="@+id/edtNumDocumento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:autofillHints="NumeroDocumento"
        android:hint="@string/hintNumDocumento"/>

    <EditText
        android:id="@+id/edtFechaInicial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:autofillHints="FechaInicial"
        android:hint="@string/hintFechaInicial"/>

    <EditText
        android:id="@+id/edtFechaFinal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:autofillHints="FechaFinal"
        android:hint="@string/hintFechaFinal"/>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnRegistrarDoc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin5dp"
            android:layout_weight="1"
            android:text="@string/btnRegistrarDoc"
            app:cornerRadius="@dimen/cornerRadius20dp" />

        <Button
            android:id="@+id/btnSalirDoc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin5dp"
            android:layout_weight="1"
            android:text="@string/btnSalirDoc"
            app:cornerRadius="@dimen/cornerRadius20dp" />
    </TableRow>
</LinearLayout>