<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="@dimen/margin50dp"
    android:layout_gravity="center">


    <Button
        android:id="@+id/btnRegVehiculos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin10dp"
        android:text="@string/btnRegVehiculos"
        app:cornerRadius="@dimen/cornerRadius20dp"/>

    <Button
        android:id="@+id/btnRegDocumentos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnRegDocumentos"
        android:layout_margin="@dimen/margin10dp"
        app:cornerRadius="@dimen/cornerRadius20dp"/>

    <Button
        android:id="@+id/btnRegGastos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnRegGastos"
        android:layout_margin="@dimen/margin10dp"
        app:cornerRadius="@dimen/cornerRadius20dp"/>

    <Button
        android:id="@+id/btnEstadisticas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnEstadisticas"
        android:layout_margin="@dimen/margin10dp"
        app:cornerRadius="@dimen/cornerRadius20dp"/>

    <Button
        android:id="@+id/btnSalirMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnSalirMenu"
        android:layout_margin="@dimen/margin10dp"
        app:cornerRadius="@dimen/cornerRadius20dp"/>
</LinearLayout>