<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="@dimen/margin100dp"
    android:layout_marginLeft="@dimen/margin50dp"
    android:layout_marginRight="@dimen/margin50dp">


    <EditText
        android:id="@+id/edtCorreoInicioSesion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:autofillHints="Correo"
        android:hint="@string/hintCorreo"/>

    <EditText
        android:id="@+id/edtClaveInicioSesion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:autofillHints="Clave"
        android:hint="@string/hintClave"/>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnEnviarInicioSesion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin20dp"
            android:layout_weight="1"
            android:text="@string/btnEnviarInicioSesion"
            app:cornerRadius="@dimen/cornerRadius20dp" />

        <Button
            android:id="@+id/btnSalirInicioSesion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnSalirInicioSesion"
            android:layout_margin="@dimen/margin20dp"
            app:cornerRadius="@dimen/cornerRadius20dp" />
    </TableRow>
</LinearLayout>