<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="@dimen/margin50dp"
    android:layout_gravity="center">


    <Button
        android:id="@+id/btnRegistro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin20dp"
        android:text="@string/btnRegistro"
        app:cornerRadius="@dimen/cornerRadius20dp"/>

    <Button
        android:id="@+id/btnInicioSesion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnInicioSesion"
        android:layout_margin="@dimen/margin20dp"
        app:cornerRadius="@dimen/cornerRadius20dp"/>

    <Button
        android:id="@+id/btnSalirInicio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnSalirInicio"
        android:layout_margin="@dimen/margin20dp"
        app:cornerRadius="@dimen/cornerRadius20dp"/>
</LinearLayout>